tests/baselines/reference/nestedClassDeclaration.errors.txt
==== tests/cases/conformance/classes/nestedClassDeclaration.ts (8 errors) ====
    // nested classes are not allowed
    
    class C {
        x: string;
        class C2 {
        ~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    function foo() {
        class C3 {
        ~~~~~
!!! error TS1129: Statement expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var x = {
        class C4 {
              ~~
!!! error TS1005: ':' expected.
                 ~
!!! error TS1005: ',' expected.
              ~~
!!! error TS2304: Cannot find name 'C4'.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    